[package]
name = "hermit-loader"
version = "0.4.6"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>", "Colin Finck <colin.finck@rwth-aachen.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
align-address = "0.1"
hermit-entry = { version = "0.9", features = ["loader"] }
log = "0.4"
sptr = "0.3"
vm-fdt = { version = "0.3", default-features = false, features = ["alloc"] }

[features]
default = []
fc = []

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9"
hermit-dtb = { version = "0.1" }
goblin = { version = "0.8", default-features = false, features = ["elf64"] }

[target.'cfg(target_os = "none")'.dependencies]
allocator-api2 = { version = "0.2", default-features = false }
exclusive_cell = "0.1"
spinning_top = "0.3"

[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1
